<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/ic_background"
    tools:context=".fragments.CreateAccountFragment">

    <TextView
        android:layout_width="200dp"
        android:layout_height="100dp"
        android:layout_marginStart="1dp"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="7dp"
        android:gravity="center"
        android:text="Login"
        android:textColor="@color/black"
        android:textSize="32sp"
        android:textStyle="bold" />

    <LinearLayout
        android:id="@+id/ll1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:orientation="vertical">

        <EditText
            android:id="@+id/emailET"
            style="@style/editTextStyle"
            android:hint="@string/email" />

        <EditText
            android:id="@+id/passwordET"
            style="@style/editTextStyle"
            android:hint="@string/password"
            android:inputType="textPassword" />

        <TextView
            android:id="@+id/forgotTv"
            style="@style/textStyle"
            android:layout_gravity="right"
            android:layout_marginBottom="50dp"
            android:text="@string/forgot_password" />

        <Button
            android:id="@+id/loginBtn"
            style="@style/buttonStyle"
            android:text="@string/login" />

        <Button
            android:id="@+id/googleSignInBtn"
            style="@style/buttonStyle"
            android:background="@drawable/google_btn_bg"
            android:text="@string/login_with_gmail" />
    </LinearLayout>

    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/ll1"
        android:layout_centerInParent="true"
        android:visibility="gone" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/ll1"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:id="@+id/signUpTv"
            style="@style/textStyle"
            android:text="@string/create_a_new_account" />
    </LinearLayout>
</RelativeLayout>



